[gd_scene load_steps=13 format=3 uid="uid://coindgqp3r1la"]

[ext_resource type="PackedScene" uid="uid://6fauqiuifkj6" path="res://scenes/ui.tscn" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://inksjlu1acf" path="res://assets/sprites/gaia2.png" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://dv4jki6uiqwvo" path="res://assets/sprites/gaia1.png" id="3_jyhfs"]
[ext_resource type="Script" uid="uid://4qoxfl1ubv2m" path="res://scripts/char_manager.gd" id="3_tbgi4"]
[ext_resource type="Script" uid="uid://dq3rajkhiqy2s" path="res://scripts/audio_manager.gd" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://ghceqo5c6mus" path="res://assets/sprites/ines2.png" id="6_o6xl0"]
[ext_resource type="Texture2D" uid="uid://bf1pnllwi0yne" path="res://assets/sprites/ines1.png" id="7_tipki"]
[ext_resource type="PackedScene" uid="uid://c6nn2t7h0jpsl" path="res://assets/blender/room1/room1.blend" id="8_tipki"]

[sub_resource type="Environment" id="Environment_tipki"]
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.59

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_tbgi4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tbgi4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sugp2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jyhfs")
}],
"loop": true,
"name": &"speak",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_85g3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_o6xl0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_tipki")
}],
"loop": true,
"name": &"speak",
"speed": 5.0
}]

[node name="Main" type="Node3D"]

[node name="UI" parent="." instance=ExtResource("1_o5qli")]

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 1.91069e-15, -4.37114e-08, 1.13167, 6.65374, 0.619147)
light_energy = 6.433
light_size = 0.704
shadow_enabled = true
shadow_blur = 0.245
spot_range = 10.959
spot_attenuation = 1.1
spot_angle = 54.97

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.66267, 1.96541, 0.619147)
keep_aspect = 0
environment = SubResource("Environment_tipki")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("4_jyhfs")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="AudioManager"]
stream = SubResource("AudioStreamMicrophone_tbgi4")
autoplay = true
bus = &"Record2"

[node name="AudioStreamPlayerW" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = true
bus = &"Woufeuse"

[node name="AudioStreamPlayerV" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = true
bus = &"Vraisorcier"

[node name="TimerThreshold" type="Timer" parent="AudioManager"]
one_shot = true

[node name="TimerDelay" type="Timer" parent="AudioManager"]
one_shot = true

[node name="CharManager" type="Node" parent="."]
script = ExtResource("3_tbgi4")

[node name="Woufeuse" type="AnimatedSprite3D" parent="CharManager"]
transform = Transform3D(-1.61286e-08, 0, 1, 0, 0.36898, 0, -0.36898, 0, -4.37114e-08, 0.371714, 1.34133, -0.381447)
alpha_cut = 2
sprite_frames = SubResource("SpriteFrames_tbgi4")
animation = &"idle"

[node name="Vraisorcier" type="AnimatedSprite3D" parent="CharManager"]
transform = Transform3D(-1.61286e-08, 0, 1, 0, 0.36898, 0, -0.36898, 0, -4.37114e-08, 0.371714, 1.34136, 1.51855)
alpha_cut = 2
sprite_frames = SubResource("SpriteFrames_85g3d")
animation = &"speak"

[node name="room1" parent="." instance=ExtResource("8_tipki")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.884047, 0, 0.554767)

[connection signal="finished" from="AudioManager/AudioStreamPlayerW" to="AudioManager" method="_on_audio_stream_player_w_finished"]
[connection signal="finished" from="AudioManager/AudioStreamPlayerV" to="AudioManager" method="_on_audio_stream_player_v_finished"]
[connection signal="timeout" from="AudioManager/TimerDelay" to="AudioManager" method="_on_timer_delay_timeout"]
